comment and spacing update

--- a/index.html
+++ b/index.html
@@ -24,10 +24,20 @@
 <body id="body">
 <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 
-  
+  <header id="header" class="header-main">
+
+  </header><!-- /#header -->
+
+  <div id="main">
+
+  </div><!-- /#main -->
+
+  <footer id="footer" class="footer-main">
+
+  </footer><!-- /#footer -->
 
 
-
+<!-- * Scripts * -->
 
 <!-- jQuery -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
